# wl-clipboard-extension

./: Cargo.toml  README.md  linux-extension  manifest.json
src/: main.rs
src/actions/: mod.rs
src/clipboard/: mod.rs
src/icons/: mod.rs
src/results/: mod.rs
