[package]
name = "whiskers-launcher-clipboard-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
dirs = "5.0.1"
sniffer-rs = "1.1.1"
serde = { version = "1.0.210", features = ["derive"] }
bincode = "1.3.3"
whiskers-launcher-core = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies]
powershell_script = "1.1.0"